tests/integration/snapshots/integration__conformance__n_structure_utf8_bom_no_data.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
﻿
stderr ---
error: unexpected character `﻿`. expected start of a json value
 --> stdin:1:1
  |
1 | ﻿
  | ^
