tests/integration/snapshots/integration__conformance__n_structure_whitespace_formfeed.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
[]
stdout ---

stderr ---
error: unexpected character `\f`. expected start of a json value
 --> stdin:1:2
  |
1 | [␌]
  |  ^
